fix overflow issue

--- a/client/src/pages/auth/auth.css
+++ b/client/src/pages/auth/auth.css
@@ -16,7 +16,7 @@
         align-items: center;
         justify-content: center;
         width: 66rem;
-        padding: 4rem 0;
+        padding: 2rem 0;
 
         &.compact-form {
             .shape-right-mid {
@@ -78,7 +78,7 @@
         align-items: center;
         justify-content: center;
         width: 42rem;
-        padding: 3rem 1rem;
+        padding: 2rem 1rem;
         background: radial-gradient(
             81.72% 81.72% at 15.75% 12.31%,
             rgba(255, 255, 255, 0.49) 0%,
@@ -94,7 +94,7 @@
             display: flex;
             justify-content: center;
             font-size: 24px;
-            margin: 1rem 0;
+            margin-top: 1rem;
             font-weight: bold;
             label {
                 color: #000000;
@@ -128,7 +128,7 @@
             flex-direction: column;
             align-items: center;
             width: 90%;
-            gap: 20px;
+            gap: 15px;
         }
 
         .auth-input {
@@ -137,7 +137,7 @@
             border: none;
             background: transparent;
             border-bottom: 2px solid rgba(124, 58, 237, 0.3);
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             outline: none;
             font-size: 16px;
             color: #333;
@@ -311,7 +311,15 @@
     .auth-container {
         .auth-box {
             width: 90%;
-            margin-top: 20px;
+            margin-top: 36px;
+
+            .auth-input {
+                padding: 10px 10px 10px 4px;
+            }
+
+            .auth-btn {
+                height: 42px;
+            }
         }
 
         .auth-wrapper {
